--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tebro/filestore",
+  "name": "tebro-filestore",
   "version": "0.1.0",
   "description": "A library for using the FileStore datastorage microservice.",
   "main": "index.js",
